Ajout cible et log

--- a/TP3/TP3/TP3.vcxproj.filters
+++ b/TP3/TP3/TP3.vcxproj.filters
@@ -21,5 +21,11 @@
     <ClInclude Include="..\Graphe.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="..\Cible.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Log.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
