debut test, Log à corriger

--- a/TP3/TP3/TP3.vcxproj
+++ b/TP3/TP3/TP3.vcxproj
@@ -20,7 +20,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cible.cpp" />
+    <ClCompile Include="Collection.cpp" />
+    <ClCompile Include="Log.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cible.h" />
