--- a/TP3/TP3/TP3.vcxproj.filters
+++ b/TP3/TP3/TP3.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Log.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="Graphe.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cible.h">
