Début du main, bases du traitement des options A refaire en ajoutant l'option g (trouver une façon plus efficace)

--- a/TP3/TP3/TP3.vcxproj.filters
+++ b/TP3/TP3/TP3.vcxproj.filters
@@ -21,13 +21,13 @@
     <ClCompile Include="Collection.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="test.cpp">
-      <Filter>Fichiers sources</Filter>
-    </ClCompile>
     <ClCompile Include="Log.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="Graphe.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="TP3.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
