--- a/TP3/TP3/TP3.vcxproj
+++ b/TP3/TP3/TP3.vcxproj
@@ -23,7 +23,7 @@
     <ClCompile Include="Collection.cpp" />
     <ClCompile Include="Graphe.cpp" />
     <ClCompile Include="Log.cpp" />
-    <ClCompile Include="test.cpp" />
+    <ClCompile Include="TP3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cible.h" />
