--- a/Tests/Test1 (no opt) err/description
+++ b/Tests/Test1 (no opt) err/description
@@ -1,2 +1,2 @@
 ﻿Ce test teste l'action par défaut du programme TP3 et vérifie la sortie
-Dans le cas ou le fichier log contient des logs mal formés.
+Dans le cas ou le fichier de logs contient des logs mal formés.
