--- a/Tests/Test3 -t err/description
+++ b/Tests/Test3 -t err/description
@@ -1,2 +1,2 @@
-﻿Ce test teste l'action par défaut du programme TP3 et vérifie la sortie
+﻿Ce test teste l'action du programme TP3 et vérifie la sortie avec l'option -t
 Dans le cas ou le fichier log contient des logs mal formés.
