--- a/Tests/Test4 -e - t limite/description
+++ b/Tests/Test4 -e - t limite/description
@@ -1,2 +1,2 @@
-﻿Ce test teste la création de graphe
+﻿Ce test teste l'action du programme TP3 et vérifie la sortie avec les options -e et -t
 Dans le cas limite où le fichier de log est vide.
