--- a/Tests/Test1 (no opt) limite/description
+++ b/Tests/Test1 (no opt) limite/description
@@ -1,2 +1,2 @@
 ﻿Ce test teste l'action par défaut du programme TP3 et vérifie la sortie
-Dans le cas ou le fichier log est vide.
+Dans le cas ou le fichier de log est vide.
