--- a/Tests/Test3 -t/description
+++ b/Tests/Test3 -t/description
@@ -1,1 +1,1 @@
-Ce test teste l'action par défaut du programme TP3 et vérifie la sortie
+﻿Ce test teste l'action du programme TP3 et vérifie la sortie avec l'option -t
